# SmartLock-Authentication-Authorization

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: CD.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_remove_can_take.py  0003_add_roles_table.py  0004_permission_enum.py  85cd5f3c6911_add_access_logs_and_update_locker_.py  d9d47d10f5a9_initial_migration.py
docker/database/: .env.example  Dockerfile  compose.yml  entrypoint.sh  healthcheck.sh
docker/keycloak/: .env.example  compose.yml
docs/: api-reference.md  deployment.md  guide-admin-dashboard.md  guide-locker-client.md  keycloak-test-guide.md  migration.md  system-design.md
sandbox/: .env.example  test_keycloak.py
scripts/: seed.py
scripts/testapp/: index.html  proxy.py
src/: main.py
src/core/: config.py  keycloak.py  keycloak_admin.py
src/crud/: crud_access_log.py  crud_categories.py  crud_items.py  crud_locker_permission.py  crud_lockers.py  crud_role.py  crud_stock.py
src/database/: session.py
src/models/: access_log.py  categories.py  items.py  locker_permission.py  lockers.py  pending_card.py  role.py  stock.py
src/routes/: access_log.py  auth.py  badge.py  categories.py  items.py  locker_permission.py  lockers.py  roles.py  roles_crud.py  stock.py  users.py
src/schemas/: access_log.py  categories.py  items.py  locker_permission.py  lockers.py  pending_card.py  role.py  stock.py
tests/: conftest.py  test.py  test_crud_role.py  test_keycloak.py  test_keycloak_admin.py  test_permission_model.py  test_roles_crud.py  test_roles_model.py  test_routes.py  test_users_lifecycle.py
(+4 files in other folders)
