[project]
name = "smartlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pip-audit>=2.10.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "mypy>=1.19.1", "pytest>=9.0.3", "ruff>=0.15.7"]

[tool.ruff]
# On demande à Ruff d'agir comme Black pour le formatage
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# On active les règles standards (E, F) et le tri des imports (I)
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
env_files = [".env"]
pythonpath = ["."]
